# loki

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.production  ENTERPRISE_LICENSE.md  LICENSE  NOTICE.md  README.md  SAFETY.md  SECURITY.md  build-release.sh  build.rs  clippy.toml  docker-compose.yml  install.sh  rust-toolchain.toml  rustfmt.toml  setup-env.sh  start.sh  test_lockfree_compile.rs
archived/models_tab_old/: models_tab.rs  models_tab_enhanced.rs
benches/: lockfree_benchmarks.rs  loki_benchmark.rs  production_readiness_bench.rs
config/: models.yaml  simd_optimizations.toml
docs/: README.md
docs/api/: cli_reference.md  plugin_api.md  tui_interface.md
docs/architecture/: UTILITIES_ARCHITECTURE.md  bridge_system.md  cognitive_architecture.md  data_flow.md  layered_design.md  module_map.md  overview.md
docs/deployment/: configuration.md  docker.md  quick_start.md
docs/operations/: monitoring.md  troubleshooting.md
docs/tutorials/: getting_started.md
helm/loki/: Chart.yaml  values.production.yaml  values.yaml
k8s/: deployment.yaml  deployment.yml  github-automation.yml  namespace.yml  secrets.yml.template  x-automation.yml
migrations/mysql/: 0001_initial.sql  001_initial_schema.sql  002_cognitive_tables.sql  003_memory_system.sql
migrations/postgres/: 0001_initial.sql  001_initial_schema.sql  002_cognitive_tables.sql  003_memory_system.sql
migrations/sqlite/: 0001_initial.sql  001_initial_schema.sql  002_cognitive_tables.sql  003_memory_system.sql
monitoring/prometheus/: prometheus.yml
src/: code_generation_analysis.rs  compiler_backend_optimization.rs  error.rs  lib.rs  main.rs  zero_cost_validation.rs
src/auth/: mod.rs  providers.rs  session.rs  storage.rs  tokens.rs
src/cli/: check_apis.rs  mod.rs  plugin_commands.rs  safety_commands.rs  tui_commands.rs  ui_commands.rs  x_commands.rs
src/cluster/: coordinator.rs  discovery.rs  health_monitor.rs  intelligent_load_balancer.rs  load_balancer.rs  mod.rs
src/cognitive/: action_planner.rs  anomaly_detection.rs  async_optimization.rs  attention_manager.rs  attribution_bridge.rs  autonomous_evolution.rs  autonomous_integration.rs  autonomous_loop.rs  character.rs  consciousness_bridge.rs  consciousness_integration.rs  consciousness_orchestration_bridge.rs  consciousness_stream.rs  context_manager.rs  decision_engine.rs  decision_engine_integration.rs  decision_learner.rs  decision_tracking.rs  distributed_consciousness.rs  emotional_core.rs  empathy_system.rs  enhanced_processor.rs  goal_manager.rs  lockfree_distributed_consciousness.rs  meta_awareness.rs  mod.rs  model_bridge.rs  multi_agent_coordinator.rs  natural_language_interface.rs  neuroplasticity.rs  neuroprocessor.rs  orchestrator.rs  pathway_tracer.rs  pr_automation.rs  production_readiness.rs  safety_integration.rs  sandbox_executor.rs  self_editing.rs  self_modify.rs  self_reflection.rs  (+24 more)
src/compute/: device.rs  memory.rs  mod.rs  scheduler.rs
src/config/: api_keys.rs  mod.rs  network.rs  secure_env.rs  setup.rs
src/core/: analyzer.rs  assistant.rs  mod.rs  panic_safe.rs  watcher.rs
src/daemon/: ipc.rs  mod.rs
src/database/: mod.rs
src/infrastructure/: mod.rs
src/mcp/: client.rs  config.rs  connection.rs  discovery.rs  marketplace.rs  mod.rs  protocol.rs  server.rs
src/memory/: associations.rs  cache.rs  cache_controller.rs  embeddings.rs  fractal_activation.rs  fractal_interface.rs  layers.rs  mod.rs  pattern_learning.rs  persistence.rs  prefetch_engine.rs  simd_cache.rs
src/models/: adaptive_learning.rs  agent_specialization_router.rs  benchmarking.rs  collaborative_sessions.rs  config.rs  cost_manager.rs  distributed_serving.rs  ensemble.rs  fine_tuning.rs  inference.rs  integration.rs  intelligent_cost_optimizer.rs  loader.rs  local_discovery.rs  local_manager.rs  mod.rs  model_discovery_service.rs  multi_agent_orchestrator.rs  orchestrator.rs  performance_analytics.rs  registry.rs  resource_monitor.rs  tests.rs
src/monitoring/: cost_analytics.rs  distributed_safety.rs  health.rs  mod.rs  performance.rs  production_optimizer.rs  real_time.rs  recovery.rs
src/ollama/: client.rs  mod.rs  models.rs
src/persistence/: archive.rs  garbage_collector.rs  index.rs  logger.rs  mod.rs
src/plugins/: api.rs  loader.rs  manager.rs  marketplace.rs  mod.rs  registry.rs  sandbox.rs  wasm_engine.rs
src/safety/: audit.rs  encryption.rs  integration_test.rs  limits.rs  mod.rs  multi_agent_safety.rs  security_audit.rs  validator.rs
src/social/: attribution.rs  content_gen.rs  mod.rs  oauth2.rs  x_client.rs  x_consciousness.rs  x_safety_wrapper.rs
src/storage/: chat_history.rs  mod.rs  secrets.rs  story_persistence.rs
src/story/: agent_coordination.rs  agent_story.rs  codebase_story.rs  context_chain.rs  context_retrieval.rs  engine.rs  export_import.rs  file_watcher.rs  learning.rs  mod.rs  story_sync.rs  task_mapper.rs  templates.rs  tests.rs  types.rs  visualization.rs
src/streaming/: buffer.rs  consciousness_bridge.rs  enhanced_context_processor.rs  lockfree_enhanced_context_processor.rs  mod.rs  pipeline.rs  processor.rs
src/tasks/: code_completion.rs  code_review.rs  documentation.rs  mod.rs  refactoring.rs  testing.rs
src/tools/: api_connector.rs  arxiv.rs  autonomous_browser.rs  blender_integration.rs  calendar.rs  code_analysis.rs  computer_use.rs  creative_generators.rs  creative_media.rs  database_cognitive.rs  discord.rs  doc_crawler.rs  email.rs  emergent_types.rs  file_system.rs  github.rs  graphql.rs  intelligent_manager.rs  mcp_client.rs  (+10 more)
tests/: chat_initialization_test.rs  cognitive_consciousness_tests.rs  cognitive_enhancements_test.rs  enhanced_tools_test.rs  integration_test.rs  integration_test_basic.rs  lockfree_enhanced_context_processor_tests.rs  lockfree_stress_tests.rs  lockfree_test.rs  memory_hierarchy_test.rs  memory_tests.rs  safety_tests.rs  story_driven_autonomy_test.rs  story_driven_pr_review_test.rs  story_driven_subsystems_test.rs  story_driven_workflow_test.rs  streaming_lockfree_tests.rs  trigger_analysis_test.rs  utilities_test.rs
(+462 files in other folders)
